[package]
name = "ruostepurkki"
version = "0.1.0"
authors = ["tero <terol@kapsi.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
openssl = "0.10.29"
rusqlite = "0.23.1"
mime = "0.3.16"
regex = "1.3.9"